# ML

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml  requirements.txt  zbpack.json
data/: profiling_dataset_template.csv
docs/: dataset_schema.md
src/ml_project/: __init__.py  adaptive_model.py  artifacts.py  dataset.py  evaluation.py  example.py  i18n.py  model_factory.py  pipeline.py  schema.py  streamlit_app.py  streamlit_helpers.py  train.py  training_history.py  training_types.py  ui_config.py
src/ml_project/ui/: __init__.py  dataframe_helpers.py  downloads.py  formatting.py
tests/: factories.py  test_adaptive_model.py  test_example.py  test_i18n.py  test_streamlit_helpers.py  test_train.py  test_training_history.py
