[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-project"
version = "0.1.0"
description = "Python machine learning project workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
